Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86307

Year appears wrong in the Calendar Widget example

XMLWordPrintable

    • All
    • d9edad81177954c89619b6dee70ca76f2f4709ef (qt/qtbase/dev) e655f9ce987e44484c94c20f404ca629d60d7686 (qt/qtbase/5.15)

      User informed that QCalendarWidget shows the year with error if the focus is lost.

      If calendars year is pressed there appears a spinbox for years. If user clicks somewhere else while this is visible the year is then presented either with "." or empty space.

      Example pictures attached and this can be tested with Calendar Widget example with Qt 5.15 and 5.14.2

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            andysh Andy Shaw
            tero.pelkonen Tero Pelkonen
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes