Show the year correctly after it has been edited

When converting the year as an integer via the locale then it can add
in group separators which would not be desired here. Therefore it should
be converted via the QDate approach to get the right output for the year.

Fixes: QTBUG-86307
Fixes: QTBUG-85966
Change-Id: I092bd1e5f69e544843fd5f28c96b94c9066490c5
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit d9edad81177954c89619b6dee70ca76f2f4709ef)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>