tests/auto/widgets/widgets/qcalendarwidget/tst_qcalendarwidget.cpp
@@ -188,6 +188,10 @@ void tst_QCalendarWidget::buttonClickCheck()
     QTest::mouseMove(widget);
     QTest::mouseClick(widget, Qt::LeftButton);
     QCOMPARE(2006, object.yearShown());
+    QTest::mouseClick(button, Qt::LeftButton, Qt::NoModifier, button->rect().center(), 2);
+    QTest::mouseMove(widget);
+    QTest::mouseClick(widget, Qt::LeftButton);
+    QCOMPARE(button->text(), "2006"); // Check that it is shown as a year should be
     object.setSelectedDate(selectedDate);
     object.showSelectedDate();
     QTest::keyClick(widget, Qt::Key_Down);
